apps/plane/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plane
  labels:
    policy.home.arpa/allow-hostpath: "true"
    policy.home.arpa/allow-root: "true"
    policy.home.arpa/allow-any-capabilities: "true"
