apps/plane/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane
  namespace: plane
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-edge-gateway
      namespace: cilium-ingress

  hostnames:
    - "pm.gwg313.xyz"
    - "pm.local.gwg313.xyz"
    - "pm.zerotier.gwg313.xyz"
  rules:
    - matches:
        - path: { type: PathPrefix, value: "/api" }
        - path: { type: PathPrefix, value: "/auth" }
      backendRefs:
        - group: ""
          kind: Service
          name: plane-api
          port: 8000
          weight: 1

    - matches:
        - path: { type: PathPrefix, value: "/live/" }
      backendRefs:
        - group: ""
          kind: Service
          name: plane-live
          port: 3000
          weight: 1

    - matches:
        - path: { type: PathPrefix, value: "/spaces" }
      backendRefs:
        - group: ""
          kind: Service
          name: plane-space
          port: 3000
          weight: 1

    - matches:
        - path: { type: PathPrefix, value: "/god-mode" }
      backendRefs:
        - group: ""
          kind: Service
          name: plane-admin
          port: 3000
          weight: 1

    - matches:
        - path: { type: PathPrefix, value: "/" }
      backendRefs:
        - group: ""
          kind: Service
          name: plane-web
          port: 3000
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-plane
  namespace: plane
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-ingress
  to:
    - group: ""
      kind: Service
      name: plane-web
    - group: ""
      kind: Service
      name: plane-api
    - group: ""
      kind: Service
      name: plane-live
    - group: ""
      kind: Service
      name: plane-space
    - group: ""
      kind: Service
      name: plane-admin
