apps/plane/templates/network-policy.yaml
# ----------------------------------------------------
# Ingress only from Gateway API
# ----------------------------------------------------
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
  namespace: plane
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8000"
              protocol: TCP
---
# ----------------------------------------------------
# All plane components (app tier + postgres/redis/rabbitmq/minio)
# talk freely to each other within the namespace
# ----------------------------------------------------
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: intra-namespace-allow
  namespace: plane
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: plane
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: plane
---
# ----------------------------------------------------
# Outbound internet for integrations, webhooks, SMTP, OAuth, etc.
# ----------------------------------------------------
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-world
  namespace: plane
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
